--- a/wash/api/package.json
+++ b/wash/api/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
     "prisma": "^5.13.0",
@@ -19,6 +20,9 @@
   },
   "dependencies": {
     "@prisma/client": "^5.13.0",
-    "express": "^4.19.1"
+    "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
