--- a/24-01/Servicos-APIs/seguranca/package.json
+++ b/24-01/Servicos-APIs/seguranca/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "npx ts-node-dev --respawn index.ts",
-    "migrate": "npx prisma migrate dev --name nome_migrate"
+    "dev": "npx ts-node-dev --respawn index.ts"
   },
   "keywords": [],
   "author": "",
@@ -13,12 +12,16 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.11.30",
-    "prisma": "^5.13.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@prisma/client": "^5.13.0",
-    "express": "^4.19.1"
+    "@prisma/client": "^5.11.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.19.1",
+    "prisma": "^5.11.0"
   }
 }
