--- a/wash/web-wash/package.json
+++ b/wash/web-wash/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/accordion": "^2.0.38",
     "@types/js-cookie": "^3.0.6",
     "js-cookie": "^3.0.5",
     "next": "14.2.3",
