--- a/wash/api/package.json
+++ b/wash/api/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parse": "^5.5.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
