--- a/wash/api/package.json
+++ b/wash/api/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.21",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.16",
     "prisma": "^5.21.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.3"
@@ -29,6 +30,7 @@
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "uuid": "^10.0.0"
   }
 }
