--- a/wash/api/package.json
+++ b/wash/api/package.json
@@ -22,6 +22,8 @@
     "typescript": "^5.4.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.698.0",
+    "@aws-sdk/s3-request-presigner": "^3.699.0",
     "@prisma/client": "^5.21.1",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -30,6 +32,7 @@
     "express": "^4.19.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
     "uuid": "^10.0.0"
   }
