chore(package): add postinstall script

--- a/wash/api/package.json
+++ b/wash/api/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "npx ts-node-dev --respawn index.ts",
     "migrate": "npx prisma migrate dev --name nome_migrate",
-    "seed": "ts-node prisma/seeds/seed.ts"
+    "seed": "ts-node prisma/seeds/seed.ts",
+    "postinstall": "prisma generate"
   },
   "keywords": [],
   "author": "",
